# fastapi-tortoise-orm-postgresql

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  init.py  main.py  pyproject.toml  run.py
app/: config.py  crud.py  init.py  main.py  models.py  views.py
app/note/: crud.py  schemas.py  views.py
